# dio_lab

./: README.md
bcmp_python_fundamentos/: 001.py  002.py
dio-git-e-github/: README.n=md
form_github/: github_doc.md
form_python_fundamentos/: 002.py  003.py  004.py  005.py  README.md  history.txt  pyproject.toml
